# crustdata-chatbot

./: README.md  generate_context.py  generate_embeddings.py  hello.py  pyproject.toml  ui.py
docs/: examples.md  home.md
docs/chunks/examples/: 000  001  002  003  004  005  006  007  008  009
docs/chunks/examples/summary/: 000  001  002  003  004  005  006  007  008  009
docs/chunks/home/: 000  001  002  003  004  005  006  007  008  009  010  011  012  013  014  015
docs/chunks/home/summary/: 000  001  002  003  004  005  006  007  008  009  010  011  012  013  014  015
markdown-chunker/: main.js  package.json  pnpm-lock.yaml
