[project]
name = "crustdata-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.5.0",
    "google-genai>=0.4.0",
    "qdrant-client>=1.12.2",
    "streamlit>=1.41.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
